// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationsTableComponent should snap like in notification page with 2 notifications sorted by create time 1`] = `
<tm-notifications-table
  NotificationsTableHeaderColorScheme={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  __ngContext__={[Function Number]}
  deleteNotificationEvent={[Function EventEmitter_]}
  guessTimezone={[Function String]}
  headerColorScheme="0"
  loadNotificationEditFormEvent={[Function EventEmitter_]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  simpleModalService={[Function SimpleModalService]}
  sortNotificationsTableRowModelsEvent={[Function EventEmitter_]}
>
  <div
    class="row"
  >
    <div
      class="col-12 table-responsive"
    >
      <table
        class="table table-responsive-lg table-striped table-bordered margin-bottom-0"
        id="notifications-table"
      >
        <thead>
          <tr
            class="bg-primary text-white"
          >
            <th
              aria-sort="none"
              class="sortable-header"
            >
              <button>
                 Title 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sortable-header"
            >
              <button>
                 Start Time 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sortable-header"
            >
              <button>
                 End Time 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sortable-header"
            >
              <button>
                 Target User 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sortable-header"
            >
              <button>
                 Style 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="descending"
              class="sortable-header"
            >
              <button>
                 Creation Time 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                  <i
                    class="fas fa-sort-down"
                  />
                </span>
              </button>
            </th>
            <th>
              Actions
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="table-success"
            id="notification1"
          >
            <td
              class="text-break"
            >
              valid title 1
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              class="text-break"
            >
              INSTRUCTOR
            </td>
            <td
              class="text-break alert alert-success"
            >
              Success (green)
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              class="actions-cell"
            >
              <div
                class="d-flex"
              >
                <button
                  class="btn btn-light btn-sm"
                  type="button"
                >
                   Edit 
                </button>
                <button
                  class="btn btn-danger btn-sm"
                  type="button"
                >
                   Delete 
                </button>
              </div>
            </td>
          </tr>
          <tr
            id="notification2"
          >
            <td
              class="text-break"
            >
              valid title 2
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Dec 9:30 AM
              </span>
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              class="text-break"
            >
              GENERAL
            </td>
            <td
              class="text-break alert alert-danger"
            >
              Danger (red)
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Nov 9:30 AM
              </span>
            </td>
            <td
              class="actions-cell"
            >
              <div
                class="d-flex"
              >
                <button
                  class="btn btn-light btn-sm"
                  type="button"
                >
                   Edit 
                </button>
                <button
                  class="btn btn-danger btn-sm"
                  type="button"
                >
                   Delete 
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</tm-notifications-table>
`;

exports[`NotificationsTableComponent should snap like in notification page with 2 notifications sorted by start time 1`] = `
<tm-notifications-table
  NotificationsTableHeaderColorScheme={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  __ngContext__={[Function Number]}
  deleteNotificationEvent={[Function EventEmitter_]}
  guessTimezone={[Function String]}
  headerColorScheme="0"
  loadNotificationEditFormEvent={[Function EventEmitter_]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  simpleModalService={[Function SimpleModalService]}
  sortNotificationsTableRowModelsEvent={[Function EventEmitter_]}
>
  <div
    class="row"
  >
    <div
      class="col-12 table-responsive"
    >
      <table
        class="table table-responsive-lg table-striped table-bordered margin-bottom-0"
        id="notifications-table"
      >
        <thead>
          <tr
            class="bg-primary text-white"
          >
            <th
              aria-sort="none"
              class="sortable-header"
            >
              <button>
                 Title 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="descending"
              class="sortable-header"
            >
              <button>
                 Start Time 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                  <i
                    class="fas fa-sort-down"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sortable-header"
            >
              <button>
                 End Time 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sortable-header"
            >
              <button>
                 Target User 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sortable-header"
            >
              <button>
                 Style 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sortable-header"
            >
              <button>
                 Creation Time 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th>
              Actions
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="table-success"
            id="notification1"
          >
            <td
              class="text-break"
            >
              valid title 1
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              class="text-break"
            >
              INSTRUCTOR
            </td>
            <td
              class="text-break alert alert-success"
            >
              Success (green)
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              class="actions-cell"
            >
              <div
                class="d-flex"
              >
                <button
                  class="btn btn-light btn-sm"
                  type="button"
                >
                   Edit 
                </button>
                <button
                  class="btn btn-danger btn-sm"
                  type="button"
                >
                   Delete 
                </button>
              </div>
            </td>
          </tr>
          <tr
            id="notification2"
          >
            <td
              class="text-break"
            >
              valid title 2
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Dec 9:30 AM
              </span>
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              class="text-break"
            >
              GENERAL
            </td>
            <td
              class="text-break alert alert-danger"
            >
              Danger (red)
            </td>
            <td
              class="text-break"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Nov 9:30 AM
              </span>
            </td>
            <td
              class="actions-cell"
            >
              <div
                class="d-flex"
              >
                <button
                  class="btn btn-light btn-sm"
                  type="button"
                >
                   Edit 
                </button>
                <button
                  class="btn btn-danger btn-sm"
                  type="button"
                >
                   Delete 
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</tm-notifications-table>
`;

exports[`NotificationsTableComponent should snap with default fields 1`] = `
<tm-notifications-table
  NotificationsTableHeaderColorScheme={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  __ngContext__={[Function Number]}
  deleteNotificationEvent={[Function EventEmitter_]}
  guessTimezone={[Function String]}
  headerColorScheme="0"
  loadNotificationEditFormEvent={[Function EventEmitter_]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  simpleModalService={[Function SimpleModalService]}
  sortNotificationsTableRowModelsEvent={[Function EventEmitter_]}
>
  <div
    class="row"
  >
    <div
      class="col-12 table-responsive"
    >
      <table
        class="table table-responsive-lg table-striped table-bordered margin-bottom-0"
        id="notifications-table"
      >
        <thead>
          <tr
            class="bg-primary text-white"
          >
            <th
              aria-sort="none"
              class="sortable-header"
            >
              <button>
                 Title 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sortable-header"
            >
              <button>
                 Start Time 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sortable-header"
            >
              <button>
                 End Time 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sortable-header"
            >
              <button>
                 Target User 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sortable-header"
            >
              <button>
                 Style 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="descending"
              class="sortable-header"
            >
              <button>
                 Creation Time 
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                  <i
                    class="fas fa-sort-down"
                  />
                </span>
              </button>
            </th>
            <th>
              Actions
            </th>
          </tr>
        </thead>
        <tbody>
        </tbody>
      </table>
    </div>
  </div>
</tm-notifications-table>
`;
